BEISDEAS-168 Fix problem with question reasons overflowing on mobile

--- a/angular/src/app/questionnaire/questionnaire.component.scss
+++ b/angular/src/app/questionnaire/questionnaire.component.scss
@@ -192,6 +192,10 @@
       width: 100%;
       margin-top: 30px;
     }
+
+    .help-text {
+      width: 100%;
+    }
   }
 
   @include tablet() {
@@ -215,6 +219,10 @@
     .question {
       width: 100%;
       margin-top: 52px;
+    }
+
+    .help-text {
+      width: 100%;
     }
   }
 
