--- a/angular/src/app/shared/question-reason/question-reason.component.scss
+++ b/angular/src/app/shared/question-reason/question-reason.component.scss
@@ -23,6 +23,7 @@
     background-color: white;
     border-radius: 10px;
     padding: 10px;
+    overflow: hidden;
 
     &.visible {
       opacity: 1;
